--- a/web/css/bootstrap.css
+++ b/web/css/bootstrap.css
@@ -6294,14 +6294,17 @@ button.close {
 .panel-info .panel-title {
   color: #fff;
 }
+
+/*! De aquí hacia abajo comienzan los css modificados */
+
 body {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 90px;
+  padding-bottom: 90px;
 }
 
 @media screen and (max-width: 768px) {
   body {
-    padding-top: 150px;
+    padding-top: 140px;
     padding-bottom: 0px;
   }
 }
@@ -6312,4 +6315,23 @@ body {
 .text-right-sinmargen {
   text-align: right;
   margin: 0;
+}
+
+.breadcrumb-modi {
+  padding: 8px 15px;
+  margin-bottom: 10px;
+  list-style: none;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+}
+.breadcrumb-modi > li {
+  display: inline-block;
+}
+.breadcrumb-modi > li + li:before {
+  content: "/\00a0";
+  padding: 0 5px;
+  color: #cccccc;
+}
+.breadcrumb-modi > .active {
+  color: #999999;
 }
