--- a/src/sagaco/AdminBundle/Resources/views/Default/pgRol.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/Default/pgRol.html.twig
@@ -1,3 +1,27 @@
 {% extends '::plantilla.html.twig' %}
 
 {% block id 'rol' %}
+    {# Titulo del requisito #}
+    {% block nbr_requisito %}Leyenda{% endblock %}{#-- Fin Titulo del requisito #}
+    
+    {# Campos de la Forma #}
+    {% block campos %}
+    <div class="form-group">
+        <label for="inputEmail" class="col-lg-2 control-label">Email</label>
+        <div class="col-lg-10">
+            <input class="form-control" id="inputEmail" placeholder="Email" type="text">
+        </div>
+    </div>
+    <button type="button" class="btn btn-default btn-lg">{{ icon('camera') }} Camera</button>
+    <a href="#">Unread messages {{ badge('42') }}</a>
+    {{ label_success('Success') }}
+{{ label_primary('Primary') }}
+{{ label_info('Info') }}
+{{ label_warning('Warning') }}
+{{ label_danger('danger') }}
+
+
+
+
+    
+    {% endblock %}{#-- Fin Campos de la Forma #}
