--- a/src/sagaco/AdminBundle/Resources/views/Default/pgRol.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/Default/pgRol.html.twig
@@ -1,27 +1,20 @@
 {% extends '::plantilla.html.twig' %}
 
 {% block id 'rol' %}
-    {# Titulo del requisito #}
-    {% block nbr_requisito %}Leyenda{% endblock %}{#-- Fin Titulo del requisito #}
-    
+   
     {# Campos de la Forma #}
-    {% block campos %}
-    <div class="form-group">
-        <label for="inputEmail" class="col-lg-2 control-label">Email</label>
-        <div class="col-lg-10">
-            <input class="form-control" id="inputEmail" placeholder="Email" type="text">
-        </div>
-    </div>
-    <button type="button" class="btn btn-default btn-lg">{{ icon('camera') }} Camera</button>
-    <a href="#">Unread messages {{ badge('42') }}</a>
-    {{ label_success('Success') }}
-{{ label_primary('Primary') }}
-{{ label_info('Info') }}
-{{ label_warning('Warning') }}
-{{ label_danger('danger') }}
-
-
-
-
+    {% block twigformulario %}
+        <form class="form-horizontal" method="post" {{form_enctype(form)}} role="form" action="{{ path('pg_rol') }}">
+            <fieldset>
+                {# Titulo del requisito #}
+                <legend>Registrar rol</legend>
+                {{ bootstrap_set_style('horizontal') }}
     
+                {#Muestra los campos del formulario#}
+                {{ form_errors(form) }}
+                {{ form_row(form._token) }}
+                {{ form_row(form.TxDescripcion, {'label': 'Rol'}) }}    
+                {{ form_row(form.Guardar)}}    
+            </fieldset>            
+        </form>    
     {% endblock %}{#-- Fin Campos de la Forma #}
