--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
         {# Informacion en pestana del navegador #}
         <title>{% block titulo %}Sagaco{% endblock %} | UNET</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">        
         
         {# Enlace de hojas de estilos CCS #}
         {% block hojaestilos %}{% endblock %}
