--- a/app/Resources/views/plantilla.html.twig
+++ b/app/Resources/views/plantilla.html.twig
@@ -1,13 +1,14 @@
 {% extends '::base.html.twig' %}
+
 {# Enlace de hojas de estilos CCS #}
 {% block hojaestilos %}
     {# Bootstrap #}
-    <link href="{{ asset('css/bootstrap.css') }}" rel="stylesheet" media="screen"> 
-    <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">    
-    
+    <link rel="stylesheet" media="screen" href="{{ asset('css/bootstrap.css') }}" >
+    <link rel="stylesheet" media="screen" href="{{ asset('css/bootstrap_modi.css') }}" >
+        
     {# HTML5 Shim and Respond.js add IE8 support of HTML5 elements and media queries #}
-    {% include 'BraincraftedBootstrapBundle::ie8-support.html.twig' %}
-{% endblock %} {# -- Fin hojas de estilos CCS #}
+    {% include 'BraincraftedBootstrapBundle::ie8-support.html.twig' %}   
+{% endblock %} {# -- Fin hojas de estilos CCS #}    
 
 {# Cuerpo de pagina #}
 {% block cuerpo %}
@@ -40,16 +41,7 @@
         </div> {#-- Fin Menu --#}
 
         {# Barra de ruta #}
-        <div class="container navbar-blanca">                
-            <ul class="breadcrumb-modi">
-                <li><a href="#"><small>Inicio</small></a></li>
-                <li><a href="#"><small>Library</small></a></li>
-                <li><a href="#"><small>Library</small></a></li>
-                <li><a href="#"><small>Library</small></a></li>
-                <li><a href="#"><small>Library</small></a></li>
-                <li class="active"><small>Data</small></li>
-            </ul>                              
-        </div> {#-- Fin Barra de ruta --#}        
+        {% block ruta %}{% endblock %}{#-- Fin Barra de ruta --#}        
     </div>
     
     <div class="container">
@@ -63,9 +55,15 @@
     
 {# Enlace y contenido de javascripts #}
 {% block javascripts %}
-    {# jQuery (necessary for Bootstraps JavaScript plugins) #}
-    <script src="{{ asset('js/jquery.js') }}"></script>
     
+    {# jQuery (necessary for Bootstraps JavaScript plugins) #}
+    <script type="text/javascript" language="javascript" src="{{ asset('js/jquery.js') }}"></script>    
+       
     {# Include all JavaScripts, compiled by Assetic #}
-    <script src="{{ asset('js/bootstrap.js') }}"></script>
+    <script src="{{ asset('js/bootstrap.js') }}"></script>       
+      
+    <script>
+        $(function () { $("[data-toggle='tooltip']").tooltip(); });        
+    </script>    
+    
 {% endblock %} 
