Arreglo de Entidades relacionadas. Eliminación de la parte ESagaco. Archivo de ruta para que Cita trabaje con annotation Signed-off-by:Jhanmara Duque <jyduque@unet.edu.ve>

--- a/app/Resources/views/plantilla.html.twig
+++ b/app/Resources/views/plantilla.html.twig
@@ -22,7 +22,7 @@
                 </a>
             </div>
             <div class="col-xs-10 col-sm-5 col-md-3 col-lg-3">
-                <h5>Servicio Automatizado para la Atención de la Coordinación de Orientación</h5>
+                <h5>Servicio Automatizado de Gestión para la Atención de la Coordinación de Orientación</h5>
             </div>
             <div class="col-sm-6 col-md-8 col-lg-8 visible-sm visible-lg">
                 <p class="text-right-sinmargen">
