--- a/app/Resources/views/plantilla.html.twig
+++ b/app/Resources/views/plantilla.html.twig
@@ -5,6 +5,7 @@
     {# Bootstrap #}
     <link rel="stylesheet" media="screen" href="{{ asset('css/bootstrap.css') }}" >
     <link rel="stylesheet" media="screen" href="{{ asset('css/bootstrap_modi.css') }}" >
+    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
         
     {# HTML5 Shim and Respond.js add IE8 support of HTML5 elements and media queries #}
     {% include 'BraincraftedBootstrapBundle::ie8-support.html.twig' %}   
@@ -47,7 +48,7 @@
     <div class="container">
         <div class="well bs-component">
         {#  Creación de los formularios #}            
-            {% block twigformulario %}{% endblock %}              
+            {% block twigformulario %}{% endblock %}           
         </div>
     </div> {# /container #}
 {% endblock %} {# -- Fin Cuerpo de pagina #}
@@ -57,7 +58,8 @@
 {% block javascripts %}
     
     {# jQuery (necessary for Bootstraps JavaScript plugins) #}
-    <script type="text/javascript" language="javascript" src="{{ asset('js/jquery.js') }}"></script>    
+    <script type="text/javascript" language="javascript" src="{{ asset('js/jquery.js') }}"></script>
+    <script>window.jQuery || document.write('<script src="{{ asset('js/jquery.js') }}"><\/script>')</script>
        
     {# Include all JavaScripts, compiled by Assetic #}
     <script src="{{ asset('js/bootstrap.js') }}"></script>       
