--- a/src/sagaco/AdminBundle/Resources/views/clGrupoRol/editar.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clGrupoRol/editar.html.twig
@@ -15,26 +15,29 @@
     {# Campos de la Forma #}
     {% block twigformulario %}
         
-            <fieldset>
-                {# Titulo del requisito #}
-                <legend>Actualizar rol
-                    <div class="pull-right">
-                        {{ form(delete_form) }}
-                    </div> 
-                    <div class="pull-right">
-                        <a href="{{ path('pgRol') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
-                            <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>                            
-                        </a> 
-                            <i class="fa fa-pencil-square-o"></i>
-                    </div>                
-                </legend>
-                
-                {#Muestra los campos del formulario#}  
-                {{ form_start(edit_form, { 'style': 'horizontal' }) }}
-                    {{ form_errors(edit_form, { 'global_errors': true }) }}
-                    {{ form_row(edit_form._token) }}
-                    {{ form_row(edit_form.nbGrupoRol, {'label': 'Rol'}) }}                    
-                {{ form_end(edit_form) }}                    
-            </fieldset>   
+        <fieldset>
+            {# Titulo del requisito #}
+            <legend>Actualizar rol
+                <div class="pull-right">
+                    {{ form(delete_form) }}
+                </div> 
+                <div class="pull-right">
+                    <a href="{{ path('pgRol') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
+                        <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>                            
+                    </a> 
+                        <i class="fa fa-pencil-square-o"></i>
+                </div>                
+            </legend>
 
+            {#Muestra los campos del formulario#}  
+            {{ form_start(edit_form, { 'style': 'horizontal' }) }}
+                {{ form_errors(edit_form, { 'global_errors': true }) }}
+                {{ form_row(edit_form._token) }}
+                {{ form_row(edit_form.nbGrupoRol, {'label': 'Rol'}) }} 
+                <div>
+                    <p class="text-left">
+                        <small class="text-muted">(</small><small class="text-muted text-danger">*</small><small class="text-muted">) Campos obligatorios</small></p>
+                </div>
+            {{ form_end(edit_form) }}                    
+        </fieldset>  
     {% endblock %}{#-- Fin Campos de la Forma #}
