--- a/src/sagaco/AdminBundle/Resources/views/clOrientador/registrar.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clOrientador/registrar.html.twig
@@ -13,29 +13,30 @@
     {% endblock %}{#-- Fin Barra de ruta --#}
     
     {# Campos de la Forma #}
-    {% block twigformulario %}
-        
-            <fieldset>
-                {# Titulo del requisito #}
-                <legend>Crear orientador
-                    <div class="pull-right">
-                        <a href="{{ path('pgOrientador') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
-                            <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>
-                        </a>                       
-                    </div>
-                </legend>
-                {#Muestra los campos del formulario#}      
-                   
-                {{ form_start(form, { 'style': 'horizontal' }) }}
-                    {{ form_errors(form, { 'global_errors': true }) }}
-                    {{ form_row(form._token) }}
-                    {{ form_row(form.txProfesion, {'label': 'Profesión'}) }}                    
-                    {{ form_row(form.txCarrerAtendida, {'label': 'Carrera atendida'}) }}
-                    {{ form_row(form.txPeriodVigencia, {'label': 'Periodo de vigencia'}) }}                    
-                    {{ form_row(form.txComentario, {'label': 'Comentario'}) }}
-                    {{ form_row(form.coRecursHumano, {'label': 'Nombre del orientador'}) }}
-                {{ form_end(form) }}                
-            </fieldset>         
-            
-        
+    {% block twigformulario %}        
+        <fieldset>
+            {# Titulo del requisito #}
+            <legend>Crear orientador
+                <div class="pull-right">
+                    <a href="{{ path('pgOrientador') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
+                        <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>
+                    </a>                       
+                </div>
+            </legend>
+            {#Muestra los campos del formulario#}      
+
+            {{ form_start(form, { 'style': 'horizontal' }) }}
+                {{ form_errors(form, { 'global_errors': true }) }}
+                {{ form_row(form._token) }}
+                {{ form_row(form.txProfesion, {'label': 'Profesión'}) }}                    
+                {{ form_row(form.txCarrerAtendida, {'label': 'Carrera atendida'}) }}
+                {{ form_row(form.txPeriodVigencia, {'label': 'Periodo de vigencia'}) }}                    
+                {{ form_row(form.txComentario, {'label': 'Comentario'}) }}
+                {{ form_row(form.coRecursHumano, {'label': 'Nombre del orientador'}) }}
+                <div>
+                    <p class="text-left">
+                        <small class="text-muted">(</small><small class="text-muted text-danger">*</small><small class="text-muted">) Campos obligatorios</small></p>
+                </div>
+            {{ form_end(form) }}                
+        </fieldset>
     {% endblock %}{#-- Fin Campos de la Forma #}
