--- a/src/sagaco/AdminBundle/Resources/views/clSemestre/registrar.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clSemestre/registrar.html.twig
@@ -15,26 +15,39 @@
     {# Campos de la Forma #}
     {% block twigformulario %}
         
-            <fieldset>
-                {# Titulo del requisito #}
-                <legend>Crear semestre
-                    <div class="pull-right">
-                        <a href="{{ path('pgSemestre') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
-                            <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>
-                        </a>                       
+        <fieldset>
+            {# Titulo del requisito #}
+            <legend>Crear semestre
+                <div class="pull-right">
+                    <a href="{{ path('pgSemestre') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
+                        <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>
+                    </a>                       
+                </div>
+            </legend>
+            {#Muestra los campos del formulario#}                 
+            {{ form_start(form, { 'style': 'horizontal' }) }}
+                {{ form_errors(form, { 'global_errors': true }) }}
+                {{ form_row(form._token) }}
+                <div class="form-group">                            
+                    <label class="col-lg-2 control-label required">Semestre</label>  
+                    <div class="col-lg-10">
+                        <div class="bootstrap-opcion">
+                        {{ form_widget(form.nuSemestAnio, { 'simple_col': 2 }) }}                               
+                        {{ form_widget(form.nuSemestLapso, { 'simple_col': 2 }) }}
+                        {{ form_errors(form.nuSemestAnio) }}
+                        {{ form_errors(form.nuSemestLapso) }}
+                        </div>                            
                     </div>
-                </legend>
-                {#Muestra los campos del formulario#}      
-                   
-                {{ form_start(form, { 'style': 'horizontal' }) }}
-                    {{ form_errors(form, { 'global_errors': true }) }}
-                    {{ form_row(form._token) }}
-                    {{ form_row(form.inActivo, { 'align_with_widget': true, 'label': 'Activo' }) }}
-                    {{ form_row(form.txSemestre, {'label': 'Semestre'}) }}                    
-                    {{ form_row(form.feInicio, {'label': 'Semestre ini'}) }}                    
-                    {{ form_row(form.feFin, {'label': 'Semestre fin'}) }}                    
-                {{ form_end(form) }}                
-            </fieldset>         
+                </div>
+                {{ form_row(form.feInicio, {'label': 'Inicio vigencia'}) }} 
+                {{ form_row(form.feFin, {'label': 'Fin vigencia'}) }}  
+                {{ form_row(form.inActivo, { 'align_with_widget': true, 'label': 'Estado' }) }} 
+                <div>
+                    <p class="text-left">
+                        <small class="text-muted">(</small><small class="text-muted text-danger">*</small><small class="text-muted">) Campos obligatorios</small></p>
+                </div>                
+            {{ form_end(form) }}                    
+        </fieldset>         
             
         
     {% endblock %}{#-- Fin Campos de la Forma #}
