Línea de no resultados en los index de Semestre y Grupo Rol Signed-off-by:Jhanmara Duque <jyduque@unet.edu.ve>

--- a/src/sagaco/AdminBundle/Resources/views/clGrupoRol/index.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clGrupoRol/index.html.twig
@@ -43,6 +43,11 @@
                         </tr>
                     </thead>
                     <tbody>
+                    {% if objPagina.getTotalItemCount == 0 %}
+                        <tr class="danger">
+                            <td colspan="9" class="text-center error"><strong>No hay resultados</strong></td>
+                        </tr>                                  
+                    {% endif %}
                     {% for objEntidad in objPagina %}
                         <tr {% if loop.index is odd %}class="color"{% endif %}>
                             <td class="text-right"><a href="{{ path('pgRol_mostrar', { 'id': objEntidad.coGrupoRol, 'blnBandera': '0'}) }}">{{ objEntidad.coGrupoRol }}</a></td>
